src/server/openai_compat/snapshots/grob__server__openai_compat__tests__canonical_tool_use_to_openai.snap
---
source: src/server/openai_compat/mod.rs
assertion_line: 460
expression: openai_resp
---
{
  "id": "msg_test",
  "object": "chat.completion",
  "created": "[timestamp]",
  "model": "gpt-4o",
  "choices": [
    {
      "index": 0,
      "message": {
        "role": "assistant",
        "content": "Let me search for that.",
        "tool_calls": [
          {
            "id": "toolu_01XYZ",
            "type": "function",
            "function": {
              "name": "web_search",
              "arguments": "{\"query\":\"Rust async runtime\"}"
            }
          }
        ]
      },
      "finish_reason": "stop"
    }
  ],
  "usage": {
    "prompt_tokens": 10,
    "completion_tokens": 20,
    "total_tokens": 30
  }
}
