src/server/openai_compat/snapshots/grob__server__openai_compat__tests__openai_multipart_image_to_canonical.snap
---
source: src/server/openai_compat/mod.rs
assertion_line: 426
expression: canonical
---
{
  "model": "claude-3",
  "messages": [
    {
      "role": "user",
      "content": [
        {
          "type": "text",
          "text": "Describe this image."
        },
        {
          "type": "image",
          "source": {
            "type": "base64",
            "media_type": "image/png",
            "data": "iVBORw0KGgo="
          }
        }
      ]
    }
  ],
  "max_tokens": 1024
}
