src/server/openai_compat/snapshots/grob__server__openai_compat__tests__openai_simple_user_to_canonical.snap
---
source: src/server/openai_compat/mod.rs
assertion_line: 337
expression: canonical
---
{
  "model": "claude-3",
  "messages": [
    {
      "role": "user",
      "content": "Hello, world!"
    }
  ],
  "max_tokens": 1024
}
