src/server/openai_compat/snapshots/grob__server__openai_compat__tests__openai_tool_call_roundtrip_to_canonical.snap
---
source: src/server/openai_compat/mod.rs
assertion_line: 403
expression: canonical
---
{
  "model": "claude-3",
  "messages": [
    {
      "role": "user",
      "content": "What's the weather?"
    },
    {
      "role": "assistant",
      "content": [
        {
          "type": "tool_use",
          "id": "call_abc123",
          "name": "get_weather",
          "input": {
            "location": "Paris",
            "units": "celsius"
          }
        }
      ]
    },
    {
      "role": "user",
      "content": [
        {
          "type": "tool_result",
          "tool_use_id": "call_abc123",
          "content": "{\"temperature\": 22, \"condition\": \"sunny\"}"
        }
      ]
    }
  ],
  "max_tokens": 1024
}
