src/server/openai_compat/snapshots/grob__server__openai_compat__tests__stop_reason_mapping.snap
---
source: src/server/openai_compat/mod.rs
assertion_line: 498
expression: mapped
---
- - end_turn
  - stop
- - max_tokens
  - length
- - stop_sequence
  - stop
- - tool_use
  - tool_calls
